------------------------------------------------------------------------------
  qSharp 2.1.2 [2015.07.17]
------------------------------------------------------------------------------

  - Introduce common interface for QTable and QKeyedTable: IQTable
  - QBasicConnection now implements IDisposable
  - Refactoring: as per ReSharper reports

------------------------------------------------------------------------------
  qSharp 2.1.1 [2015.03.23]
------------------------------------------------------------------------------

  - Fix: sanity check against protocol version for guids
  - Add serialization for type: char[][]

------------------------------------------------------------------------------
  qSharp 2.1.0 [2014.10.01]
------------------------------------------------------------------------------

  - Redesigned lambdas and projections handling

------------------------------------------------------------------------------
  qSharp 2.0.6 [2014.09.11]
------------------------------------------------------------------------------

  - Fix: reading of generic null (::) embedded in lists

------------------------------------------------------------------------------
  qSharp 2.0.5 [2014.09.01]
------------------------------------------------------------------------------

  - Rewrite QBasicConnection.Open() and QBasicConnection.Close() methods to use 
    QBasicConnection.IsConnected() instead of null check

------------------------------------------------------------------------------
  qSharp 2.0.4 [2014.07.29]
------------------------------------------------------------------------------

  - QListener pushes all types of exceptions via error event handler

------------------------------------------------------------------------------
  qSharp 2.0.3 [2014.06.10]
------------------------------------------------------------------------------

  - Fix: behaviour of toString and fromString methods in QTime, QSecond